@@ -264,3 +264,4 @@ suggestions:
   Florian Petry
   Lars Beckers
   Dustin J. Mitchell
+  James Cline
